--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -167,5 +167,13 @@
     "BOARD": "доску",
     "COLUMN": "колонку",
     "TASK": "задачу"
-  }
+  },
+  "BACKEND": {
+    "CLOSE": "Закрыть"
+  },
+  "User login already exists!": "Пользователь уже существует!",
+  "User was not founded!": "Пользователь не найден!",
+  "Internal server error": "Произошла непредвиденная ошибка. Повторите попытку позже.",
+  "Something went wrong": "Произошла непредвиденная ошибка. Повторите попытку позже.",
+  "Validation failed (uuid is expected)": "Доска не существует."
 }
