feat: add localization

--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,9 +1,14 @@
 {
   "HEADER": {
     "BUTTONS": {
-      "CREATE": "создать новую доску",
-      "LOGOUT": "выйти",
-      "EDIT": "изменить профиль"
+      "CREATE": "Создать доску",
+      "LOGOUT": "Выйти",
+      "EDIT": "Редактировать профиль",
+      "DELETE": "Удалить профиль",
+      "LOG-IN": "Войти",
+      "SIGN-UP": "Зарегистрироваться",
+      "WELCOME": "Добро пожаловать",
+      "BOARDS": "Доски"
     }
   },
   "LOGIN-PAGE": {
@@ -17,7 +22,10 @@
       "PASSWORD": "Пароль "
     },
     "REQUIRED": "обязателен",
-    "BUTTON": "Войти"
+    "BUTTONS": {
+      "REGISTRATION": "Зарегистрироваться",
+      "LOGIN": "Войти"
+    }
   },
   "SIGN-UP-PAGE": {
     "TITLE": "Регистрация",
@@ -35,14 +43,32 @@
       "NAME": "обязательно",
       "OTHER": "обязателен"
     },
-    "BUTTON": "Зарегистрироваться"
+    "BUTTONS": {
+      "SIGN-UP": "Зарегистрироваться",
+      "LOGIN": "Войти"
+    }
   },
   "WELCOME-PAGE": {
-    "LOGOUT": "Выйти",
-    "DELETE": "Удалить"
+    "GREETING-TEXT": "Планируйте проекты и управляйте задачами!",
+    "MANAGEMENT": {
+      "1": "Организуйте работу своего коллектива в общем пространстве.",
+      "2": "Добавляйте колонки, задачи и виртуиальные доски.",
+      "3": "Ставьте и контролируйте задачи любой сложности."
+    },
+    "SETTINGS": {
+      "1": "Выстраивайте работу над проектом по любой удобной вам методике.",
+      "2": "Управляйте зависящими друг от друга, пересекающимися и непредвиденными задачами, а также создавайте реалистичные планы."
+    },
+    "BUTTON": "О команде",
+    "SUBTITLE": "О команде",
+    "NAMES": {
+      "DIMA": "Дима",
+      "NASTYA": "Настя",
+      "LERA": "Лера"
+    }
   },
   "UPDATE-USER": {
-    "TITLE": "Обновить",
+    "TITLE": "Редактирование профиля",
     "INPUTS": {
       "NAME": "Имя",
       "LOGIN": "Логин",
@@ -126,6 +152,7 @@
     }
   },
   "BOARD-PAGE": {
+    "LINK": "Доски",
     "BUTTONS": {
       "CREATE": {
         "COLUMN": "Создать колонку",
@@ -137,7 +164,8 @@
   "BOARDS-PAGE": {
     "BUTTONS": {
       "CREATE": "Создать доску",
-      "DELETE": "Удалить"
+      "DELETE": "Удалить",
+      "OPEN": "Открыть"
     }
   },
   "SEARCH-TASKS-PAGE": {
@@ -146,6 +174,10 @@
     "USER": "Пользователь",
     "NUMB": "№",
     "DONE": "Выполнено",
+    "LABELS": {
+      "COLUMN": "Колонка",
+      "SEARCH": "Поиск"
+    },
     "PAGINATOR": {
       "PER-PAGE": "Элементов на странице",
       "NEXT-PAGE": "Следующая страница",
@@ -159,13 +191,15 @@
   "DELETE-DIALOG": {
     "TITLE": "внимание",
     "DELETE": "Удалить {{ target }}?",
-    "TEXT": "Вы собираетесь безвозвратно удалить эту {{ type }} и все его данные. Если вы не уверены, вы можете отменить это действие.",
+    "TEXT": "Вы собираетесь безвозвратно удалить эту {{ type }} и все её данные. Если вы не уверены, вы можете отменить это действие.",
+    "USER-TEXT": "Вы собираетесь безвозвратно удалить этого {{ type }}я и все его данные. Если вы не уверены, вы можете отменить это действие.",
     "BUTTONS": {
-      "DELETE": "Delete",
-      "CANCEL": "Cancel"
+      "DELETE": "Удалить",
+      "CANCEL": "Отменить"
     },
     "BOARD": "доску",
     "COLUMN": "колонку",
-    "TASK": "задачу"
+    "TASK": "задачу",
+    "USER": "пользователя"
   }
 }
